Checking in changes prior to tagging of version 0.03.
Changelog diff is:

diff --git a/Changes b/Changes
index cb188ec..8e322d8 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Ukigumo::Client

+0.03
+
+    - better error message on ukigumo-client.pl
+    - doc fix
+
 0.02

     - win32 fix(mattn++)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Ukigumo::Client
 
+0.03
+
+    - better error message on ukigumo-client.pl
+    - doc fix
+
 0.02
 
     - win32 fix(mattn++)
