Checking in changes prior to tagging of version 0.04.
Changelog diff is:

diff --git a/Changes b/Changes
index 8e322d8..e7c1db4 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client

+0.04
+
+    - allow '/' character in branch name
+
 0.03

     - better error message on ukigumo-client.pl

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client
 
+0.04
+
+    - allow '/' character in branch name
+
 0.03
 
     - better error message on ukigumo-client.pl
