Checking in changes prior to tagging of version 0.06.
Changelog diff is:

diff --git a/Changes b/Changes
index 59a9c3b..2cf2c5c 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client

+0.06
+
+    - fixed packaging issue
+
 0.05

     - [Notify::Ikachan] make ignore_success option as '1' by default.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client
 
+0.06
+
+    - fixed packaging issue
+
 0.05
 
     - [Notify::Ikachan] make ignore_success option as '1' by default.
