Checking in changes prior to tagging of version 0.12.
Changelog diff is:

diff --git a/Changes b/Changes
index ebe7fe1..4a5f86f 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client

+0.12
+
+    - skip notification if $status is success and last status was skipped.
+
 0.11

     * 8a6f9d8 better diag on http response error

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Ukigumo::Client
 
+0.12
+
+    - skip notification if $status is success and last status was skipped.
+
 0.11
 
     * 8a6f9d8 better diag on http response error
